--- a/index.html
+++ b/index.html
@@ -2,11 +2,372 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
+    <title>Техномарт</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
-  </body>
+    <header>
+    <div>
+      <a href="#">Техномарт</a>
+      <form action="https://echo.htmlacademy.ru" method="POST">
+        <input id="search-field" type="search" name="search" placeholder="Поиск">
+        <button id="search-submit" type="submit"></button>
+      </form>
+      <a href="#">Закладки: <span>0</span></a>
+      <a href="#">Корзина: <span>0</span></a>
+      <a href="#">Оформить заказ</a>
+    </div>
+          <div>
+              Интернет-магазин
+              <br>
+              строительных материалов 
+              <br>
+              и инструментов для ремонта
+          </div>
+          <div>
+              <div>
+                  +7 (812) 555-05-55
+              </div>
+              <div>
+                  г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+              </div>
+          </div>
+          <div>
+              <a href="#">Войти</a>
+              <a href="#" >Регистрация</a>
+          </div>
+      <nav>
+          <ul>
+              <li>
+                  <a href="#">Главная</a>
+              </li>
+              <li>
+                  <a href="#">Компания</a>
+              </li>
+              <li>
+                  <a href="catalog.html">Каталог</a>
+              </li>
+              <li>
+                  <a href="#">Новости</a>
+              </li>
+              <li>
+                  <a href="#">Спецпредложения</a>
+              </li>
+              <li>
+                  <a href="#">Доставка</a>
+              </li>
+              <li>
+                  <a href="#">Контакты</a>
+              </li>
+          </ul>
+      </nav>
+    </header>
+  <main>
+    <h1>Техномарт</h1> <!--Потом спрятать-->
+    <section>
+      <h2>Услуги</h2> <!--Потом спрятать-->
+      <div>
+      <p>Материалы</p>
+      <a href="#">НА ЛЮБОЙ ВКУС</a>
+      </div>
+      <div>
+      <p>Инструмент</p>
+      <a href="#">НА ВСЕ СЛУЧАИ</a>
+      </div>
+      <div>
+      <p>Техника</p>
+      <a href="#">ДЛЯ СТРОЙКИ</a>
+      </div>
+      <div>
+      <p>Скидки 50%</p>
+      <a href="#">НА 350 ТОВАРОВ</a>
+      </div>
+      <div>
+      <p>Доставка</p>
+      <a href="#">БЕСПЛАТНО</a>
+      </div>
+      <div>
+          <figure>
+            <img alt="Рабочий сверлит стену перфоратором" width="620" height="266">
+          <button type="button" disabled>Назад</button>
+          <button type="button">Вперед</button>
+        </figure>
+            <p>ПЕРФОРАТОРЫ</p>
+            <p>Настоящие мужские игрушки</p>
+          <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
+        </div>
+    </section>
+    <section>
+      <div>
+        <h2>ПОПУЛЯРНЫЕ ТОВАРЫ:</h2>
+        <a href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
+      </div>
+      <div>
+        <article>
+          <figure>
+            <img alt="Перфоратор BOSCH BFG 9000" width="220" height="318">
+          </figure>
+          <p>Перфоратор BOSCH
+            <br>
+            BFG 9000</p>
+          <p>25500 Р.<span>32500 Р.</span></p>          
+        </article>
+        <article>
+          <figure>
+            <img alt="Перфоратор BOSCH BFG 3000" width="220" height="318">
+          </figure>
+          <p>Перфоратор BOSCH
+            <br>
+            BFG 3000
+          </p>
+          <p >15500 Р.<span>22500 Р.</span></p>          
+        </article>
+        <article>
+          <figure>
+            <img alt="Перфоратор BOSCH BFG 6000" width="220" height="318">
+          </figure>
+          <p>Перфоратор BOSCH
+            <br>
+            BFG 6000
+          </p>
+          <p >25500 Р.<span>30500 Р.</span></p>
+        </article>
+        <article>
+          <figure>
+            <img alt="Перфоратор BOSCH BFG 2000" width="220" height="318">
+          </figure>
+          <p>Перфоратор BOSCH
+            <br>
+            BFG 2000
+          </p>
+          <p>12500 Р.<span>32500 P.</span></p>          
+        </article>
+      </div>
+    </section>
+    <section>
+      <div>
+          <h2>ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ:</h2>
+          <a href="#">ВСЕ ПРОИЗВОДИТЕЛИ</a>
+      </div>
+      <div>
+          <a href="#">
+              <img alt="Bosch" width="220" height="145">
+          </a>
+          <a href="#">
+              <img alt="Makita" width="220" height="145">
+          </a>
+          <a href="#">
+              <img alt="DeWalt" width="220" height="145">
+          </a>
+          <a href="#">
+              <img alt="Интерскол" width="220" height="145">
+          </a>
+          <a href="#">
+              <img alt="Hitachi" width="220" height="145">
+          </a>
+          <a href="#">
+              <img alt="LG" width="220" height="145">
+          </a>
+          <a href="#">
+              <img alt="AEG" width="220" height="145">
+          </a>
+          <a href="#">
+              <img alt="Metabo" width="220" height="145">
+          </a>
+      </div>
+    </section>
+    <section>
+      <h2>Дополнительные услуги</h2> <!--Потом спрятать-->
+      <div>
+        <h2>Сервисы</h2>
+        <p>
+          Хороший интернет-магазин отличается от плохого не только ценами! 
+          <br>
+          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+        </p>
+      </div>
+      <div>
+        <button type="button">Доставка</button>
+        <button type="button">Гарантия</button>
+        <button type="button">Кредит</button>
+      </div>
+      <div>
+        <p>ДОСТАВКА</p>
+        <p>
+        Мы с удовольствием доставим ваш товар прямо
+        <br>
+        к вашему подъезду совершенно бесплатно!
+        <br>
+        Ведь мы неплохо заработаем,
+        <br>
+        поднимая его на ваш этаж!
+        </p>
+      </div>
+      <div>
+        <p>ГАРАНТИЯ</p>
+        <p>
+        Если купленный у нас товар поломается или заискрит,
+        <br>
+        а также в случае пожара, спровоцированного его
+        <br>
+        возгоранием, вы всегда можете быть уверены в нашей
+        <br>
+        гарантии. Мы обменяем сгоревший товар на новый.
+        <br>
+        Дом уж восстановите как-нибудь сами.
+        </p>
+       </div>
+       <div>
+        <p>КРЕДИТ</p>
+        <p>
+        Залезть в долговую яму стало проще!
+        <br>
+        Кредитные консультанты придут вам на помощь.
+        </p>
+        <a href="#">ОТПРАВИТЬ ЗАЯВКУ</a>
+       </div>
+    </section>
+    <section>
+      <h2>Общая информация о компании</h2> <!--Потом спрятать-->
+      <div>
+        <h3>КОМПАНИЯ «ТЕХНОМАРТ»</h3>
+        <p>
+        Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для
+        <br>
+        ремонта и строительства не оставит равнодушными любителей сэкономить на
+        <br>
+        гастарбайтерах.</p>
+        <p>
+          Мы можем доставить ваш товар в самые отдаленные точки России!
+          <br>
+          Техномарт работает со многими транспортными компаниями:
+        </p>
+        <ul>
+          <li><a href="#">Деловые линии</a></li>
+          <li><a href="#">Автотрейдинг</a></li>
+          <li><a href="#">ЖелДорЭкспедиция</a></li>
+        </ul>
+        <a href="#">ПОДРОБНЕЕ О КОМПАНИИ</a>
+      </div>
+      <div>
+        <h3 >КОНТАКТЫ</h3>
+        <p>Вы можете забрать товар сами,
+          <br>
+          заехав в наш офис:
+        </p>
+        <div>
+          <a href="#">
+            <figure>
+              <img alt="Санкт-Петербург, Большая Конюшенная ул., дом 19">
+            </figure>
+          </a>
+        </div>
+        <a  href="#">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</a>
+      </div>
+    </section>
+    <section>
+      <h2>Напишите нам</h2> <!--Потом спрятать-->
+      <form action="https://echo.htmlacademy.ru" method="POST">
+        <p>
+        <label for="userName">Ваше имя:</label>
+          <input id="userName" type="text" name="userName" placeholder="Имя Фамилия">
+        </p>
+        <p>
+        <label for="userEmail">Ваш e-mail:</label>
+          <input id="userEmail" type="email" name="userEmail" placeholder="e-mail@example.com">
+        </p>
+        <p>
+        <label for="userMessage">Текст письма:</label>
+          <textarea id="userMessage" name="userMsg" cols="30" rows="5" placeholder="В свободной форме"></textarea>
+        </p>
+        <p>
+        <button type="submit">ОТПРАВИТЬ</button>
+        <button type="button">Закрыть</button>
+      </p>
+      </form>
+    </section>
+    <section id="Map">
+      <h2>Как до нас добраться</h2> <!--Потом спрятать-->
+      <!--Здесь будет карта-->
+      <button type="button">Закрыть</button>
+    </section>
+  </main>
+</body>
+  <footer>
+    <div>
+      <div>
+        <div>
+          <a>ТЕХНОМАРТ</a>
+          <address>
+            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+            <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+          </address>
+        </div>
+        <nav>
+          <ul>
+            <li>
+              <a href="#">Компания</a>
+            </li>
+            <li>
+              <a href="#">Новости</a>
+            </li>
+            <li>
+              <a href="#">Каталог</a>
+            </li>
+            <li>
+              <a href="#">Доставка</a>
+            </li>
+            <li>
+              <a href="#">Контакты</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="#">Материалы</a>
+            </li>
+            <li>
+              <a href="#">Техника</a>
+            </li>
+            <li>
+              <a href="#">Инструмент</a>
+            </li>
+            <li>
+              <a href="#">Спецпредложения</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <div>
+      <div>
+        <div>
+          <p>© 2010–2017 Компания «Техномарт»
+            <br>
+            Все права защищены</p>
+        </div>
+        <div>
+          <ul>
+            <li>
+              <a href="#">Вконтакте</a>
+            </li>
+            <li>
+              <a href="#">Фейсбук</a>
+            </li>
+            <li>
+              <a href="#">Инстаграм</a>
+            </li>
+          </ul>
+          <div>
+            <p>Обратная связь:
+              <br>
+              <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            </p>
+            <p>Разработано —
+              <br>
+              <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </html>
