добавила картинкам сурсы-заглушки

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div>
         <article>
           <figure>
-            <img alt="Перфоратор BOSCH BFG 9000" width="220" height="318">
+            <img src="https://via.placeholder.com/220x318" alt="Перфоратор BOSCH BFG 9000" width="220" height="318">
           </figure>
           <p>Перфоратор BOSCH
             <br>
@@ -113,7 +113,7 @@
         </article>
         <article>
           <figure>
-            <img alt="Перфоратор BOSCH BFG 3000" width="220" height="318">
+            <img src="https://via.placeholder.com/220x318" alt="Перфоратор BOSCH BFG 3000" width="220" height="318">
           </figure>
           <p>Перфоратор BOSCH
             <br>
@@ -123,7 +123,7 @@
         </article>
         <article>
           <figure>
-            <img alt="Перфоратор BOSCH BFG 6000" width="220" height="318">
+            <img src="https://via.placeholder.com/220x318" alt="Перфоратор BOSCH BFG 6000" width="220" height="318">
           </figure>
           <p>Перфоратор BOSCH
             <br>
@@ -133,7 +133,7 @@
         </article>
         <article>
           <figure>
-            <img alt="Перфоратор BOSCH BFG 2000" width="220" height="318">
+            <img src="https://via.placeholder.com/220x318" alt="Перфоратор BOSCH BFG 2000" width="220" height="318">
           </figure>
           <p>Перфоратор BOSCH
             <br>
@@ -150,28 +150,28 @@
       </div>
       <div>
           <a href="#">
-              <img alt="Bosch" width="220" height="145">
+              <img src="https://via.placeholder.com/220x145" alt="Bosch" width="220" height="145">
           </a>
           <a href="#">
-              <img alt="Makita" width="220" height="145">
+              <img src="https://via.placeholder.com/220x145" alt="Makita" width="220" height="145">
           </a>
           <a href="#">
-              <img alt="DeWalt" width="220" height="145">
+              <img src="https://via.placeholder.com/220x145" alt="DeWalt" width="220" height="145">
           </a>
           <a href="#">
-              <img alt="Интерскол" width="220" height="145">
+              <img src="https://via.placeholder.com/220x145" alt="Интерскол" width="220" height="145">
           </a>
           <a href="#">
-              <img alt="Hitachi" width="220" height="145">
+              <img src="https://via.placeholder.com/220x145" alt="Hitachi" width="220" height="145">
           </a>
           <a href="#">
-              <img alt="LG" width="220" height="145">
+              <img src="https://via.placeholder.com/220x145" alt="LG" width="220" height="145">
           </a>
           <a href="#">
-              <img alt="AEG" width="220" height="145">
+              <img src="https://via.placeholder.com/220x145" alt="AEG" width="220" height="145">
           </a>
           <a href="#">
-              <img alt="Metabo" width="220" height="145">
+              <img src="https://via.placeholder.com/220x145" alt="Metabo" width="220" height="145">
           </a>
       </div>
     </section>
