--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   </head>
   <body>
     <header>
-    <div>
-      <a href="#">Техномарт</a>
+      <a href="#"><h1>Техномарт</h1></a>
       <form action="https://echo.htmlacademy.ru" method="POST">
         <input id="search-field" type="search" name="search" placeholder="Поиск">
         <button id="search-submit" type="submit"></button>
@@ -15,26 +14,11 @@
       <a href="#">Закладки: <span>0</span></a>
       <a href="#">Корзина: <span>0</span></a>
       <a href="#">Оформить заказ</a>
-    </div>
-          <div>
-              Интернет-магазин
-              <br>
-              строительных материалов 
-              <br>
-              и инструментов для ремонта
-          </div>
-          <div>
-              <div>
-                  +7 (812) 555-05-55
-              </div>
-              <div>
-                  г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-              </div>
-          </div>
-          <div>
+              Интернет-магазин строительных материалов и инструментов для ремонта
+                <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+                <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
               <a href="#">Войти</a>
               <a href="#" >Регистрация</a>
-          </div>
       <nav>
           <ul>
               <li>
@@ -65,90 +49,66 @@
     <h1>Техномарт</h1> <!--Потом спрятать-->
     <section>
       <h2>Услуги</h2> <!--Потом спрятать-->
-      <div>
-      <p>Материалы</p>
-      <a href="#">НА ЛЮБОЙ ВКУС</a>
-      </div>
-      <div>
-      <p>Инструмент</p>
-      <a href="#">НА ВСЕ СЛУЧАИ</a>
-      </div>
-      <div>
-      <p>Техника</p>
-      <a href="#">ДЛЯ СТРОЙКИ</a>
-      </div>
-      <div>
-      <p>Скидки 50%</p>
-      <a href="#">НА 350 ТОВАРОВ</a>
-      </div>
-      <div>
-      <p>Доставка</p>
-      <a href="#">БЕСПЛАТНО</a>
-      </div>
-      <div>
-          <figure>
-            <img alt="Рабочий сверлит стену перфоратором" width="620" height="266">
-          <button type="button" disabled>Назад</button>
-          <button type="button">Вперед</button>
-        </figure>
-            <p>ПЕРФОРАТОРЫ</p>
-            <p>Настоящие мужские игрушки</p>
-          <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
-        </div>
+      <ul>
+        <li>
+        <h3>Материалы</h3>
+        <a href="#">НА ЛЮБОЙ ВКУС</a>
+        </li>
+        <li>
+        <h3>Инструмент</h3>
+        <a href="#">НА ВСЕ СЛУЧАИ</a>
+        </li>
+        <li>
+        <h3>Техника</h3>
+        <a href="#">ДЛЯ СТРОЙКИ</a>
+        </li>
+        <li>
+        <h3>Скидки 50%</h3>
+        <a href="#">НА 350 ТОВАРОВ</a>
+        </li>
+        <li>
+        <h3>Доставка</h3>
+        <a href="#">БЕСПЛАТНО</a>
+        <img src="https://via.placeholder.com/620x266" alt="Рабочий сверлит стену перфоратором" width="620" height="266">
+        <button type="button" disabled>Назад</button>
+        <button type="button">Вперед</button>
+        <h3>ПЕРФОРАТОРЫ</h3>
+        <p>Настоящие мужские игрушки</p>
+        <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
+        </li>
+      </ul>
     </section>
     <section>
-      <div>
         <h2>ПОПУЛЯРНЫЕ ТОВАРЫ:</h2>
         <a href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
-      </div>
-      <div>
         <article>
-          <figure>
+          <h3>Перфоратор BOSCH BFG 9000</h3>
+            <a href="#"><span>25500 Р.</span></a>
+            <span>32500 Р.</span>
             <img src="https://via.placeholder.com/220x318" alt="Перфоратор BOSCH BFG 9000" width="220" height="318">
-          </figure>
-          <p>Перфоратор BOSCH
-            <br>
-            BFG 9000</p>
-          <p>25500 Р.<span>32500 Р.</span></p>          
         </article>
         <article>
-          <figure>
+          <h3>Перфоратор BOSCH BFG 3000</h3>
             <img src="https://via.placeholder.com/220x318" alt="Перфоратор BOSCH BFG 3000" width="220" height="318">
-          </figure>
-          <p>Перфоратор BOSCH
-            <br>
-            BFG 3000
-          </p>
-          <p >15500 Р.<span>22500 Р.</span></p>          
+            <a href="#"><span>15500 Р.</span></a>
+            <span>22500 Р.</span>         
         </article>
         <article>
-          <figure>
+          <h3>Перфоратор BOSCH BFG 6000</h3>
             <img src="https://via.placeholder.com/220x318" alt="Перфоратор BOSCH BFG 6000" width="220" height="318">
-          </figure>
-          <p>Перфоратор BOSCH
-            <br>
-            BFG 6000
-          </p>
-          <p >25500 Р.<span>30500 Р.</span></p>
+            <a href="#"><span>25500 Р.</span></a>
+            <span>30500 Р.</span>
         </article>
         <article>
-          <figure>
+          <h3>Перфоратор BOSCH BFG 2000</h3>
             <img src="https://via.placeholder.com/220x318" alt="Перфоратор BOSCH BFG 2000" width="220" height="318">
-          </figure>
-          <p>Перфоратор BOSCH
-            <br>
-            BFG 2000
-          </p>
-          <p>12500 Р.<span>32500 P.</span></p>          
+            <a href="#"><span>12500 Р.</span></a>
+            <span>32500 P.</span>      
         </article>
-      </div>
     </section>
     <section>
-      <div>
           <h2>ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ:</h2>
           <a href="#">ВСЕ ПРОИЗВОДИТЕЛИ</a>
-      </div>
-      <div>
           <a href="#">
               <img src="https://via.placeholder.com/220x145" alt="Bosch" width="220" height="145">
           </a>
@@ -173,73 +133,39 @@
           <a href="#">
               <img src="https://via.placeholder.com/220x145" alt="Metabo" width="220" height="145">
           </a>
-      </div>
     </section>
     <section>
       <h2>Дополнительные услуги</h2> <!--Потом спрятать-->
-      <div>
-        <h2>Сервисы</h2>
+        <h3>Сервисы</h3>
         <p>
-          Хороший интернет-магазин отличается от плохого не только ценами! 
-          <br>
+          Хороший интернет-магазин отличается от плохого не только ценами!
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
         </p>
-      </div>
-      <div>
         <button type="button">Доставка</button>
         <button type="button">Гарантия</button>
         <button type="button">Кредит</button>
-      </div>
-      <div>
         <p>ДОСТАВКА</p>
         <p>
-        Мы с удовольствием доставим ваш товар прямо
-        <br>
-        к вашему подъезду совершенно бесплатно!
-        <br>
-        Ведь мы неплохо заработаем,
-        <br>
-        поднимая его на ваш этаж!
+        Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!
         </p>
-      </div>
-      <div>
         <p>ГАРАНТИЯ</p>
         <p>
-        Если купленный у нас товар поломается или заискрит,
-        <br>
-        а также в случае пожара, спровоцированного его
-        <br>
-        возгоранием, вы всегда можете быть уверены в нашей
-        <br>
-        гарантии. Мы обменяем сгоревший товар на новый.
-        <br>
-        Дом уж восстановите как-нибудь сами.
+        Если купленный и нас товар поломается и заискрит, а также в случае пожара, спровоцированного его возгоранием, вы всегда можете быть уверены в своей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.
         </p>
-       </div>
-       <div>
         <p>КРЕДИТ</p>
         <p>
-        Залезть в долговую яму стало проще!
-        <br>
-        Кредитные консультанты придут вам на помощь.
+        Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.
         </p>
         <a href="#">ОТПРАВИТЬ ЗАЯВКУ</a>
-       </div>
     </section>
     <section>
       <h2>Общая информация о компании</h2> <!--Потом спрятать-->
-      <div>
         <h3>КОМПАНИЯ «ТЕХНОМАРТ»</h3>
         <p>
-        Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для
-        <br>
-        ремонта и строительства не оставит равнодушными любителей сэкономить на
-        <br>
-        гастарбайтерах.</p>
+        Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
+      </p>
         <p>
-          Мы можем доставить ваш товар в самые отдаленные точки России!
-          <br>
-          Техномарт работает со многими транспортными компаниями:
+          Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:
         </p>
         <ul>
           <li><a href="#">Деловые линии</a></li>
@@ -247,37 +173,29 @@
           <li><a href="#">ЖелДорЭкспедиция</a></li>
         </ul>
         <a href="#">ПОДРОБНЕЕ О КОМПАНИИ</a>
-      </div>
-      <div>
         <h3 >КОНТАКТЫ</h3>
-        <p>Вы можете забрать товар сами,
-          <br>
-          заехав в наш офис:
+        <p>
+          Вы можете забрать товар сами,заехав в наш офис:
         </p>
-        <div>
           <a href="#">
-            <figure>
-              <img alt="Санкт-Петербург, Большая Конюшенная ул., дом 19">
-            </figure>
+              <img src="https://via.placeholder.com/300x158" alt="Санкт-Петербург, Большая Конюшенная ул., дом 19" width="300" height="158">
           </a>
-        </div>
         <a  href="#">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</a>
-      </div>
     </section>
     <section>
       <h2>Напишите нам</h2> <!--Потом спрятать-->
       <form action="https://echo.htmlacademy.ru" method="POST">
         <p>
-        <label for="userName">Ваше имя:</label>
-          <input id="userName" type="text" name="userName" placeholder="Имя Фамилия">
+        <label for="user-Name">Ваше имя:</label>
+          <input id="user-Name" type="text" name="user-Name" placeholder="Имя Фамилия">
         </p>
         <p>
-        <label for="userEmail">Ваш e-mail:</label>
-          <input id="userEmail" type="email" name="userEmail" placeholder="e-mail@example.com">
+        <label for="user-Email">Ваш e-mail:</label>
+          <input id="user-Email" type="email" name="user-Email" placeholder="e-mail@example.com">
         </p>
         <p>
-        <label for="userMessage">Текст письма:</label>
-          <textarea id="userMessage" name="userMsg" cols="30" rows="5" placeholder="В свободной форме"></textarea>
+        <label for="user-Message">Текст письма:</label>
+          <textarea id="user-Message" name="user-Msg" cols="30" rows="5" placeholder="В свободной форме"></textarea>
         </p>
         <p>
         <button type="submit">ОТПРАВИТЬ</button>
@@ -291,83 +209,64 @@
       <button type="button">Закрыть</button>
     </section>
   </main>
-</body>
   <footer>
-    <div>
-      <div>
-        <div>
-          <a>ТЕХНОМАРТ</a>
-          <address>
-            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-            <a href="tel:+78125550555">+7 (812) 555-05-55</a>
-          </address>
-        </div>
-        <nav>
-          <ul>
-            <li>
-              <a href="#">Компания</a>
-            </li>
-            <li>
-              <a href="#">Новости</a>
-            </li>
-            <li>
-              <a href="#">Каталог</a>
-            </li>
-            <li>
-              <a href="#">Доставка</a>
-            </li>
-            <li>
-              <a href="#">Контакты</a>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="#">Материалы</a>
-            </li>
-            <li>
-              <a href="#">Техника</a>
-            </li>
-            <li>
-              <a href="#">Инструмент</a>
-            </li>
-            <li>
-              <a href="#">Спецпредложения</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </div>
-    <div>
-      <div>
-        <div>
-          <p>© 2010–2017 Компания «Техномарт»
-            <br>
-            Все права защищены</p>
-        </div>
-        <div>
-          <ul>
-            <li>
-              <a href="#">Вконтакте</a>
-            </li>
-            <li>
-              <a href="#">Фейсбук</a>
-            </li>
-            <li>
-              <a href="#">Инстаграм</a>
-            </li>
-          </ul>
-          <div>
-            <p>Обратная связь:
-              <br>
-              <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-            </p>
-            <p>Разработано —
-              <br>
-              <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
+    <a><h1>ТЕХНОМАРТ</h1></a>
+    <address>
+      г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+      <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+    </address>
+  <nav>
+    <ul>
+      <li>
+        <a href="#">Компания</a>
+      </li>
+      <li>
+        <a href="#">Новости</a>
+      </li>
+      <li>
+        <a href="#">Каталог</a>
+      </li>
+      <li>
+        <a href="#">Доставка</a>
+      </li>
+      <li>
+        <a href="#">Контакты</a>
+      </li>
+    </ul>
+    <ul>
+      <li>
+        <a href="#">Материалы</a>
+      </li>
+      <li>
+        <a href="#">Техника</a>
+      </li>
+      <li>
+        <a href="#">Инструмент</a>
+      </li>
+      <li>
+        <a href="#">Спецпредложения</a>
+      </li>
+    </ul>
+  </nav>
+    <p>© 2010–2017 Компания «Техномарт»
+      Все права защищены</p>
+    <ul>
+      <li>
+        <a href="#">Вконтакте</a>
+      </li>
+      <li>
+        <a href="#">Фейсбук</a>
+      </li>
+      <li>
+        <a href="#">Инстаграм</a>
+      </li>
+    </ul>
+      <p>Обратная связь:
+        <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+      </p>
+      <p>Разработано —
+        <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+      </p>
+</footer>
+</body>
 </html>
