учла рез-ты повторной проверки и отформатировала

--- a/index.html
+++ b/index.html
@@ -1,171 +1,256 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Техномарт</title>
   </head>
   <body>
     <header>
       <a href="#"><h1>Техномарт</h1></a>
       <form action="https://echo.htmlacademy.ru" method="POST">
-        <input id="search-field" type="search" name="search" placeholder="Поиск">
+        <input
+          id="search-field"
+          type="search"
+          name="search"
+          placeholder="Поиск"
+        />
         <button id="search-submit" type="submit"></button>
       </form>
       <a href="#">Закладки: <span>0</span></a>
       <a href="#">Корзина: <span>0</span></a>
       <a href="#">Оформить заказ</a>
-              Интернет-магазин строительных материалов и инструментов для ремонта
-                <a href="tel:+78125550555">+7 (812) 555-05-55</a>
-                <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
-              <a href="#">Войти</a>
-              <a href="#" >Регистрация</a>
+      <h1>
+        Интернет-магазин строительных материалов и инструментов для ремонта
+      </h1>
+      <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+      <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+      <a href="#">Войти</a>
+      <a href="#">Регистрация</a>
       <nav>
-          <ul>
-              <li>
-                  <a href="#">Главная</a>
-              </li>
-              <li>
-                  <a href="#">Компания</a>
-              </li>
-              <li>
-                  <a href="catalog.html">Каталог</a>
-              </li>
-              <li>
-                  <a href="#">Новости</a>
-              </li>
-              <li>
-                  <a href="#">Спецпредложения</a>
-              </li>
-              <li>
-                  <a href="#">Доставка</a>
-              </li>
-              <li>
-                  <a href="#">Контакты</a>
-              </li>
-          </ul>
+        <ul>
+          <li>
+            <a href="#">Главная</a>
+          </li>
+          <li>
+            <a href="#">Компания</a>
+          </li>
+          <li>
+            <a href="catalog.html">Каталог</a>
+          </li>
+          <li>
+            <a href="#">Новости</a>
+          </li>
+          <li>
+            <a href="#">Спецпредложения</a>
+          </li>
+          <li>
+            <a href="#">Доставка</a>
+          </li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
       </nav>
     </header>
-  <main>
-    <h1>Техномарт</h1> <!--Потом спрятать-->
-    <section>
-      <h2>Услуги</h2> <!--Потом спрятать-->
-      <ul>
-        <li>
-        <h3>Материалы</h3>
-        <a href="#">НА ЛЮБОЙ ВКУС</a>
-        </li>
-        <li>
-        <h3>Инструмент</h3>
-        <a href="#">НА ВСЕ СЛУЧАИ</a>
-        </li>
-        <li>
-        <h3>Техника</h3>
-        <a href="#">ДЛЯ СТРОЙКИ</a>
-        </li>
-        <li>
-        <h3>Скидки 50%</h3>
-        <a href="#">НА 350 ТОВАРОВ</a>
-        </li>
-        <li>
-        <h3>Доставка</h3>
-        <a href="#">БЕСПЛАТНО</a>
-        <img src="https://via.placeholder.com/620x266" alt="Рабочий сверлит стену перфоратором" width="620" height="266">
-        <button type="button" disabled>Назад</button>
-        <button type="button">Вперед</button>
-        <h3>ПЕРФОРАТОРЫ</h3>
-        <p>Настоящие мужские игрушки</p>
-        <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
-        </li>
-      </ul>
-    </section>
-    <section>
+    <main>
+      <h1>Техномарт</h1>
+      <!--Потом спрятать-->
+      <section>
+        <h2>Услуги</h2>
+        <!--Потом спрятать-->
+        <ul>
+          <li>
+            <h3>Материалы</h3>
+            <a href="#">НА ЛЮБОЙ ВКУС</a>
+          </li>
+          <li>
+            <h3>Инструмент</h3>
+            <a href="#">НА ВСЕ СЛУЧАИ</a>
+          </li>
+          <li>
+            <h3>Техника</h3>
+            <a href="#">ДЛЯ СТРОЙКИ</a>
+          </li>
+          <li>
+            <h3>Скидки 50%</h3>
+            <a href="#">НА 350 ТОВАРОВ</a>
+          </li>
+          <li>
+            <h3>Доставка</h3>
+            <a href="#">БЕСПЛАТНО</a>
+            <img
+              src="https://via.placeholder.com/620x266"
+              alt="Рабочий сверлит стену перфоратором"
+              width="620"
+              height="266"
+            />
+            <button type="button" disabled>Назад</button>
+            <button type="button">Вперед</button>
+            <h3>ПЕРФОРАТОРЫ</h3>
+            <p>Настоящие мужские игрушки</p>
+            <a href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
+          </li>
+        </ul>
+      </section>
+      <section>
         <h2>ПОПУЛЯРНЫЕ ТОВАРЫ:</h2>
         <a href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
         <article>
           <h3>Перфоратор BOSCH BFG 9000</h3>
-            <a href="#"><span>25500 Р.</span></a>
-            <span>32500 Р.</span>
-            <img src="https://via.placeholder.com/220x318" alt="Перфоратор BOSCH BFG 9000" width="220" height="318">
+          <a href="#">25500 Р.</a>
+          <span>32500 Р.</span>
+          <img
+            src="https://via.placeholder.com/220x318"
+            alt="Перфоратор BOSCH BFG 9000"
+            width="220"
+            height="318"
+          />
         </article>
         <article>
           <h3>Перфоратор BOSCH BFG 3000</h3>
-            <img src="https://via.placeholder.com/220x318" alt="Перфоратор BOSCH BFG 3000" width="220" height="318">
-            <a href="#"><span>15500 Р.</span></a>
-            <span>22500 Р.</span>         
+          <img
+            src="https://via.placeholder.com/220x318"
+            alt="Перфоратор BOSCH BFG 3000"
+            width="220"
+            height="318"
+          />
+          <a href="#">15500 Р.</a>
+          <span>22500 Р.</span>
         </article>
         <article>
           <h3>Перфоратор BOSCH BFG 6000</h3>
-            <img src="https://via.placeholder.com/220x318" alt="Перфоратор BOSCH BFG 6000" width="220" height="318">
-            <a href="#"><span>25500 Р.</span></a>
-            <span>30500 Р.</span>
+          <img
+            src="https://via.placeholder.com/220x318"
+            alt="Перфоратор BOSCH BFG 6000"
+            width="220"
+            height="318"
+          />
+          <a href="#">25500 Р.</a>
+          <span>30500 Р.</span>
         </article>
         <article>
           <h3>Перфоратор BOSCH BFG 2000</h3>
-            <img src="https://via.placeholder.com/220x318" alt="Перфоратор BOSCH BFG 2000" width="220" height="318">
-            <a href="#"><span>12500 Р.</span></a>
-            <span>32500 P.</span>      
+          <img
+            src="https://via.placeholder.com/220x318"
+            alt="Перфоратор BOSCH BFG 2000"
+            width="220"
+            height="318"
+          />
+          <a href="#">12500 Р.</a>
+          <span>32500 P.</span>
         </article>
-    </section>
-    <section>
-          <h2>ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ:</h2>
-          <a href="#">ВСЕ ПРОИЗВОДИТЕЛИ</a>
-          <a href="#">
-              <img src="https://via.placeholder.com/220x145" alt="Bosch" width="220" height="145">
-          </a>
-          <a href="#">
-              <img src="https://via.placeholder.com/220x145" alt="Makita" width="220" height="145">
-          </a>
-          <a href="#">
-              <img src="https://via.placeholder.com/220x145" alt="DeWalt" width="220" height="145">
-          </a>
-          <a href="#">
-              <img src="https://via.placeholder.com/220x145" alt="Интерскол" width="220" height="145">
-          </a>
-          <a href="#">
-              <img src="https://via.placeholder.com/220x145" alt="Hitachi" width="220" height="145">
-          </a>
-          <a href="#">
-              <img src="https://via.placeholder.com/220x145" alt="LG" width="220" height="145">
-          </a>
-          <a href="#">
-              <img src="https://via.placeholder.com/220x145" alt="AEG" width="220" height="145">
-          </a>
-          <a href="#">
-              <img src="https://via.placeholder.com/220x145" alt="Metabo" width="220" height="145">
-          </a>
-    </section>
-    <section>
-      <h2>Дополнительные услуги</h2> <!--Потом спрятать-->
+      </section>
+      <section>
+        <h2>ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ:</h2>
+        <a href="#">ВСЕ ПРОИЗВОДИТЕЛИ</a>
+        <a href="#">
+          <img
+            src="https://via.placeholder.com/220x145"
+            alt="Bosch"
+            width="220"
+            height="145"
+          />
+        </a>
+        <a href="#">
+          <img
+            src="https://via.placeholder.com/220x145"
+            alt="Makita"
+            width="220"
+            height="145"
+          />
+        </a>
+        <a href="#">
+          <img
+            src="https://via.placeholder.com/220x145"
+            alt="DeWalt"
+            width="220"
+            height="145"
+          />
+        </a>
+        <a href="#">
+          <img
+            src="https://via.placeholder.com/220x145"
+            alt="Интерскол"
+            width="220"
+            height="145"
+          />
+        </a>
+        <a href="#">
+          <img
+            src="https://via.placeholder.com/220x145"
+            alt="Hitachi"
+            width="220"
+            height="145"
+          />
+        </a>
+        <a href="#">
+          <img
+            src="https://via.placeholder.com/220x145"
+            alt="LG"
+            width="220"
+            height="145"
+          />
+        </a>
+        <a href="#">
+          <img
+            src="https://via.placeholder.com/220x145"
+            alt="AEG"
+            width="220"
+            height="145"
+          />
+        </a>
+        <a href="#">
+          <img
+            src="https://via.placeholder.com/220x145"
+            alt="Metabo"
+            width="220"
+            height="145"
+          />
+        </a>
+      </section>
+      <section>
+        <h2>Дополнительные услуги</h2>
+        <!--Потом спрятать-->
         <h3>Сервисы</h3>
         <p>
-          Хороший интернет-магазин отличается от плохого не только ценами!
-          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+          Хороший интернет-магазин отличается от плохого не только ценами! Мы
+          стараемся изо всех сил, чтобы сделать ваши покупки приятными.
         </p>
         <button type="button">Доставка</button>
         <button type="button">Гарантия</button>
         <button type="button">Кредит</button>
         <p>ДОСТАВКА</p>
         <p>
-        Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!
+          Мы с удовольствием доставим ваш товар прямо к вашему подъезду
+          совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш
+          этаж!
         </p>
         <p>ГАРАНТИЯ</p>
         <p>
-        Если купленный и нас товар поломается и заискрит, а также в случае пожара, спровоцированного его возгоранием, вы всегда можете быть уверены в своей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.
+          Если купленный и нас товар поломается и заискрит, а также в случае
+          пожара, спровоцированного его возгоранием, вы всегда можете быть
+          уверены в своей гарантии. Мы обменяем сгоревший товар на новый. Дом уж
+          восстановите как-нибудь сами.
         </p>
         <p>КРЕДИТ</p>
         <p>
-        Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.
+          Залезть в долговую яму стало проще! Кредитные консультанты придут вам
+          на помощь.
         </p>
         <a href="#">ОТПРАВИТЬ ЗАЯВКУ</a>
-    </section>
-    <section>
-      <h2>Общая информация о компании</h2> <!--Потом спрятать-->
+      </section>
+      <section>
+        <h2>Общая информация о компании</h2>
+        <!--Потом спрятать-->
         <h3>КОМПАНИЯ «ТЕХНОМАРТ»</h3>
         <p>
-        Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
-      </p>
+          Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для
+          ремонта и строительства не оставит равнодушными любителей сэкономить
+          на гастарбайтерах.
+        </p>
         <p>
-          Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:
+          Мы можем доставить ваш товар в самые отдаленные точки России!
+          Техномарт работает со многими транспортными компаниями:
         </p>
         <ul>
           <li><a href="#">Деловые линии</a></li>
@@ -173,100 +258,122 @@
           <li><a href="#">ЖелДорЭкспедиция</a></li>
         </ul>
         <a href="#">ПОДРОБНЕЕ О КОМПАНИИ</a>
-        <h3 >КОНТАКТЫ</h3>
-        <p>
-          Вы можете забрать товар сами,заехав в наш офис:
-        </p>
-          <a href="#">
-              <img src="https://via.placeholder.com/300x158" alt="Санкт-Петербург, Большая Конюшенная ул., дом 19" width="300" height="158">
-          </a>
-        <a  href="#">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</a>
-    </section>
-    <section>
-      <h2>Напишите нам</h2> <!--Потом спрятать-->
-      <form action="https://echo.htmlacademy.ru" method="POST">
-        <p>
-        <label for="user-Name">Ваше имя:</label>
-          <input id="user-Name" type="text" name="user-Name" placeholder="Имя Фамилия">
-        </p>
-        <p>
-        <label for="user-Email">Ваш e-mail:</label>
-          <input id="user-Email" type="email" name="user-Email" placeholder="e-mail@example.com">
-        </p>
-        <p>
-        <label for="user-Message">Текст письма:</label>
-          <textarea id="user-Message" name="user-Msg" cols="30" rows="5" placeholder="В свободной форме"></textarea>
-        </p>
-        <p>
-        <button type="submit">ОТПРАВИТЬ</button>
+        <h3>КОНТАКТЫ</h3>
+        <p>Вы можете забрать товар сами,заехав в наш офис:</p>
+        <a href="#">
+          <img
+            src="https://via.placeholder.com/300x158"
+            alt="Санкт-Петербург, Большая Конюшенная ул., дом 19"
+            width="300"
+            height="158"
+          />
+        </a>
+        <a href="#">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</a>
+      </section>
+      <section>
+        <h2>Напишите нам</h2>
+        <!--Потом спрятать-->
+        <form action="https://echo.htmlacademy.ru" method="POST">
+          <p>
+            <label for="user-Name">Ваше имя:</label>
+            <input
+              id="user-Name"
+              type="text"
+              name="user-Name"
+              placeholder="Имя Фамилия"
+            />
+          </p>
+          <p>
+            <label for="user-Email">Ваш e-mail:</label>
+            <input
+              id="user-Email"
+              type="email"
+              name="user-Email"
+              placeholder="e-mail@example.com"
+            />
+          </p>
+          <p>
+            <label for="user-Message">Текст письма:</label>
+            <textarea
+              id="user-Message"
+              name="user-Msg"
+              cols="30"
+              rows="5"
+              placeholder="В свободной форме"
+            ></textarea>
+          </p>
+          <p>
+            <button type="submit">ОТПРАВИТЬ</button>
+            <button type="button">Закрыть</button>
+          </p>
+        </form>
+      </section>
+      <section id="Map">
+        <h2>Как до нас добраться</h2>
+        <!--Потом спрятать-->
+        <!--Здесь будет карта-->
         <button type="button">Закрыть</button>
-      </p>
-      </form>
-    </section>
-    <section id="Map">
-      <h2>Как до нас добраться</h2> <!--Потом спрятать-->
-      <!--Здесь будет карта-->
-      <button type="button">Закрыть</button>
-    </section>
-  </main>
-  <footer>
-    <a><h1>ТЕХНОМАРТ</h1></a>
-    <address>
-      г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-      <a href="tel:+78125550555">+7 (812) 555-05-55</a>
-    </address>
-  <nav>
-    <ul>
-      <li>
-        <a href="#">Компания</a>
-      </li>
-      <li>
-        <a href="#">Новости</a>
-      </li>
-      <li>
-        <a href="#">Каталог</a>
-      </li>
-      <li>
-        <a href="#">Доставка</a>
-      </li>
-      <li>
-        <a href="#">Контакты</a>
-      </li>
-    </ul>
-    <ul>
-      <li>
-        <a href="#">Материалы</a>
-      </li>
-      <li>
-        <a href="#">Техника</a>
-      </li>
-      <li>
-        <a href="#">Инструмент</a>
-      </li>
-      <li>
-        <a href="#">Спецпредложения</a>
-      </li>
-    </ul>
-  </nav>
-    <p>© 2010–2017 Компания «Техномарт»
-      Все права защищены</p>
-    <ul>
-      <li>
-        <a href="#">Вконтакте</a>
-      </li>
-      <li>
-        <a href="#">Фейсбук</a>
-      </li>
-      <li>
-        <a href="#">Инстаграм</a>
-      </li>
-    </ul>
-      <p>Обратная связь:
+      </section>
+    </main>
+    <footer>
+      <a><h1>ТЕХНОМАРТ</h1></a>
+      <address>
+        г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+        <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+      </address>
+      <nav>
+        <ul>
+          <li>
+            <a href="#">Компания</a>
+          </li>
+          <li>
+            <a href="#">Новости</a>
+          </li>
+          <li>
+            <a href="#">Каталог</a>
+          </li>
+          <li>
+            <a href="#">Доставка</a>
+          </li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <a href="#">Материалы</a>
+          </li>
+          <li>
+            <a href="#">Техника</a>
+          </li>
+          <li>
+            <a href="#">Инструмент</a>
+          </li>
+          <li>
+            <a href="#">Спецпредложения</a>
+          </li>
+        </ul>
+      </nav>
+      <p>© 2010–2017 Компания «Техномарт» Все права защищены</p>
+      <ul>
+        <li>
+          <a href="#">Вконтакте</a>
+        </li>
+        <li>
+          <a href="#">Фейсбук</a>
+        </li>
+        <li>
+          <a href="#">Инстаграм</a>
+        </li>
+      </ul>
+      <p>
+        Обратная связь:
         <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
       </p>
-      <p>Разработано —
+      <p>
+        Разработано —
         <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
       </p>
-</footer>
-</body>
+    </footer>
+  </body>
 </html>
